crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_sharing__unary.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_sharing.rs
assertion_line: 34
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
case@Bool true of
  True -> 42
  False -> addInteger (headList (con (list integer) [])) (headList (con (list integer) []))
--- unoptimized UPLC
(program 1.1.0
  (case
    (con bool True)
    [[(builtin addInteger) [(force (builtin headList)) (con (list integer) [])]]
      [(force (builtin headList)) (con (list integer) [])]]
    (con integer 42)))
--- optimized Core
case@Bool true of
  True -> 42
  False -> let anf#1 : int = headList (con (list integer) []) in
  let anf#2 : int = headList (con (list integer) []) in
  addInteger anf#1 anf#2
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    (case
      (con bool True)
      [(lam anf_3
        [(lam anf_4 [[(builtin addInteger) anf_3] anf_4])
          [builtin_5 (con (list integer) [])]])
        [builtin_5 (con (list integer) [])]]
      (con integer 42)))
    (force (builtin headList))])
--- isolated pass
--- uplc before
[(lam builtin_1
  (case
    (con bool True)
    [[(builtin addInteger) [builtin_1 (con (list integer) [])]]
      [builtin_1 (con (list integer) [])]]
    (con integer 42)))
  (force (builtin headList))]
--- uplc after
[(lam builtin_1
  (case
    (con bool True)
    [[(builtin addInteger) [builtin_1 (con (list integer) [])]]
      [builtin_1 (con (list integer) [])]]
    (con integer 42)))
  (force (builtin headList))]
--- result
(con integer 42)
--- logs
[]
